--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -45,11 +45,11 @@
     </nav>
 
     
-    <div class="container-fluid body-content h-100" style="margin-top:15px">
+    <div class="container-fluid body-content h-100 center-block" style="margin-top:15px">
         @RenderBody() 
         <hr />
         <footer>
-            <p>&copy; 2019 - PawsClaws</p>
+            <p>&copy; 2020 - Nicholas Pet Haven</p>
         </footer>
     </div>
 
