--- a/PawsClaws/wwwroot/css/site.css
+++ b/PawsClaws/wwwroot/css/site.css
@@ -51,12 +51,15 @@ body {
 .flip-card {
     background-color: transparent;
     border: 1px solid #f1f1f1;
+    width: 100%;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    position: relative;
 }
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
     position: relative;
+    width: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -69,7 +72,7 @@ body {
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
-    position: absolute;
+    position:absolute;
     backface-visibility: hidden;
 }
 
@@ -86,3 +89,30 @@ body {
     transform: rotateY(180deg);
 }
 
+.card-flip > div {
+  backface-visibility: hidden;
+  transition: transform 300ms;
+  transition-timing-function: linear;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+}
+
+.card-front {
+  transform: rotateY(0deg);
+}
+
+.card-back {
+  transform: rotateY(180deg);
+  position: absolute;
+  top: 0;
+}
+
+.card-flip:hover .card-front {
+  transform: rotateY(-180deg);
+}
+  
+.card-flip:hover .card-back {
+  transform: rotateY(0deg);
+}
